<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="io.github.sogoesagain.proximityalarm.MainActivity">

    <TextView
            android:text="@string/location_list"
            android:gravity="center"
            android:layout_margin="2pt"
            android:padding="2pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12pt"/>

    <ListView
            android:id="@+id/locationListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
    </ListView>

    <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/registerButton"
                android:text="@string/register_location"
                android:textSize="15pt"
                android:background="@color/yellow"
                android:layout_weight="1"
                android:layout_margin="2pt"
                android:padding="2pt"
                android:onClick="onClickRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <Button
                android:id="@+id/deleteButton"
                android:text="@string/delete_location"
                android:textSize="15pt"
                android:background="@color/white"
                android:layout_weight="1"
                android:layout_margin="2pt"
                android:padding="2pt"
                android:onClick="onClickDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
