<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/location_name"
                    android:gravity="center"
                    android:layout_margin="2pt"
                    android:padding="2pt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="12pt"/>

            <EditText
                    android:id="@+id/locationName"
                    android:singleLine="true"
                    android:gravity="center"
                    android:layout_margin="2pt"
                    android:padding="2pt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="12pt"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/location_latitude"
                    android:gravity="center"
                    android:layout_margin="2pt"
                    android:padding="2pt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="12pt"/>

            <EditText
                    android:id="@+id/locationLatitude"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:gravity="center"
                    android:layout_margin="2pt"
                    android:padding="2pt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="12pt"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/location_longitude"
                    android:gravity="center"
                    android:layout_margin="2pt"
                    android:padding="2pt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="12pt"/>

            <EditText
                    android:id="@+id/locationLongtitude"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:gravity="center"
                    android:layout_margin="2pt"
                    android:padding="2pt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="12pt"/>
        </LinearLayout>


        <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/location_radius"
                    android:gravity="center"
                    android:layout_margin="2pt"
                    android:padding="2pt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="12pt"/>

            <EditText
                    android:id="@+id/locationRadius"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:gravity="center"
                    android:layout_margin="2pt"
                    android:padding="2pt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="12pt"/>
        </LinearLayout>


        <Button
                android:id="@+id/registerButton"
                android:text="@string/register_location"
                android:layout_gravity="center"
                android:textSize="15pt"
                android:background="@color/yellow"
                android:layout_margin="2pt"
                android:padding="2pt"
                android:onClick="onClickRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/current_location"
                android:layout_margin="2pt"
                android:padding="2pt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12pt"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/location_latitude"
                    android:gravity="center"
                    android:layout_margin="2pt"
                    android:padding="2pt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="12pt"/>

            <TextView
                    android:id="@+id/currentLatitude"
                    android:gravity="center"
                    android:layout_margin="2pt"
                    android:padding="2pt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="12pt"/>
        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/location_longitude"
                    android:gravity="center"
                    android:layout_margin="2pt"
                    android:padding="2pt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="12pt"/>

            <TextView
                    android:id="@+id/currentLongitude"
                    android:gravity="center"
                    android:layout_margin="2pt"
                    android:padding="2pt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="12pt"/>

        </LinearLayout>

        <Button
                android:id="@+id/getCurrentLocation"
                android:text="@string/get_current_location"
                android:layout_gravity="center"
                android:textSize="15pt"
                android:background="@color/white"
                android:layout_margin="2pt"
                android:padding="2pt"
                android:onClick="onClickGetCurrentLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>